WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258361
Regression(
260713@main
)
https://www.theverge.com/2023/5/17/23686294/montana-tiktok-ban-signed-governor-gianforte-court
load never completes
https://bugs.webkit.org/show_bug.cgi?id=258361
Summary
Regression(260713@main) https://www.theverge.com/2023/5/17/23686294/montana-t...
Chris Dumez
Reported
2023-06-21 11:51:59 PDT
https://www.theverge.com/2023/5/17/23686294/montana-tiktok-ban-signed-governor-gianforte-court
load never completes since
260713@main
. When we delay a lazy iframe load, it also delays the load event of the parent frame until the lazy iframe is actually loaded.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-06-21 11:52:08 PDT
<
rdar://109517889
>
Chris Dumez
Comment 2
2023-06-21 11:59:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15151
EWS
Comment 3
2023-06-21 21:12:14 PDT
Committed
265391@main
(409eb08416e5): <
https://commits.webkit.org/265391@main
> Reviewed commits have been landed. Closing PR #15151 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug